--- a/practice day 5 bennett clone result feature/index.html
+++ b/practice day 5 bennett clone result feature/index.html
@@ -46,7 +46,7 @@
                 <div class="sub-box1">
                     <ul>
                         <p class="margin">Odd_Semester_AY 2023-2024</p>
-                        <p class="major">SGPA  MAJOR: 7.67</p>
+                        <p class="major">SGPA  MAJOR: 9.78</p>
                         <p class="course">Course</p>
                         <p class="text">Computational Thinking and Programming</p>
                         <p class="text">Introduction to Electrical and Electronics Engineering</p>
@@ -58,11 +58,11 @@
                 <ul>
                     <p class="result">Result Declared</p>
                     <p class="grade">Grade</p>
-                    <p class="text2">B+ (5)</p>
-                    <p class="text2">C+ (4)</p>
+                    <p class="text2">A+ (5)</p>
+                    <p class="text2">A+ (4)</p>
                     <p class="text2">A+ (2)</p>
                     <p class="text2">A+ (3)</p>
-                    <p class="text2">B+ (4)</p>
+                    <p class="text2">A+ (4)</p>
                 </ul>
             </div>
 
@@ -71,7 +71,7 @@
                 <div class="sub-box1">
                     <ul>
                         <p class="margin">Even_Semester_AY 2023-2024</p>
-                        <p class="major">SGPA  MAJOR: 8.11</p>
+                        <p class="major">SGPA  MAJOR: 9.82</p>
                         <p class="course">Course</p>
                         <p class="text">Digital Design</p>
                         <p class="text">Discete Mathematical Stuctures</p>
@@ -84,11 +84,11 @@
                 <ul>
                     <p class="result">Result Declared</p>
                     <p class="grade">Grade</p>
-                    <p class="text2">B  (4)</p>
-                    <p class="text2">A  (4)</p>
-                    <p class="text2">B+ (6)</p>
-                    <p class="text2">B+ (4)</p>
-                    <p class="text2">C+ (5)</p>
+                    <p class="text2">A+  (4)</p>
+                    <p class="text2">A+  (4)</p>
+                    <p class="text2">A+ (6)</p>
+                    <p class="text2">A+ (4)</p>
+                    <p class="text2">A+ (5)</p>
                     <p class="text2">A+ (1)</p>
                 </ul>
         </div>
